# pelican-tabular

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  main-updated.yaml  publish-to-pypi.yaml
src/pelican/plugins/tabular/: __init__.py  tabular.py
tests/: test_init.py  test_markdown_ext.py  test_tabular.py
tests/test_tabular/: test_render_table_html_regression.html
